--- a/theme/css/class_overwrite.css
+++ b/theme/css/class_overwrite.css
@@ -46,8 +46,9 @@ h3 { margin-block-start: 1em; }
 .m-y-8 { margin-top: calc(var(--spacing)*8); margin-bottom: calc(var(--spacing)*8) }
 .m-y-12 { margin-top: calc(var(--spacing)*12); margin-bottom: calc(var(--spacing)*12) }
 
-.font-xlarge { font-size: x-large; }
-.font-xxlarge { font-size: xx-large; }
+.text-l { font-size: large; }
+.text-xl { font-size: x-large; }
+.text-2xl { font-size: xx-large; }
 
 .font-bold { font-weight: bold; }
 
