--- a/theme/css/class_overwrite.css
+++ b/theme/css/class_overwrite.css
@@ -13,28 +13,43 @@ h2 { margin-block-start: 1.5em; }
 
 h3 { margin-block-start: 1em; }
 
+.w-full { width: 100%; }
+.w-30 { width: 30%; }
+
 .flex { display: flex; }
 
 .flex-col { flex-direction: column; }
 
 .flex-row { flex-direction: row; }
 
-.flex-25 { flex: 1 0 22%; }
-.flex-50 { flex: 1 0 47%; }
-.flex-60 { flex: 1 0 58%; }
-.flex-75 { flex: 1 0 72%; }
+.flex-15 { flex: 0 0 15%; }
+.flex-20 { flex: 0 0 20%; }
+.flex-25 { flex: 1 0 25%; }
+.flex-50 { flex: 1 0 50%; }
+.flex-60 { flex: 1 0 60%; }
+.flex-75 { flex: 1 0 75%; }
 
 .justify-center { justify-content: center; }
+.justify-between { justify-content: space-between; }
+
+.items-center { align-items: center; }
+
+.text-center { text-align: center; }
 
 .gap-x-2 { column-gap: 2rem; }
 
 .p-4 { padding: calc(var(--spacing)*4); }
+.p-x-4 { padding-left: calc(var(--spacing)*4); padding-right: calc(var(--spacing)*4); }
+.p-b-4 { padding-bottom: calc(var(--spacing)*4); }
+
 
 .m-t-2 { margin-top: calc(var(--spacing)*2); }
 .m-t-4 { margin-top: calc(var(--spacing)*4); }
 .m-t-6 { margin-top: calc(var(--spacing)*6); }
 .m-t-8 { margin-top: calc(var(--spacing)*8); }
 .m-t-12 { margin-top: calc(var(--spacing)*12); }
+.m-t-24 { margin-top: calc(var(--spacing)*24); }
+
 
 .m-b-6 { margin-bottom: calc(var(--spacing)*6) }
 .m-b-8 { margin-bottom: calc(var(--spacing)*8) }
@@ -52,6 +67,10 @@ h3 { margin-block-start: 1em; }
 
 .font-bold { font-weight: bold; }
 
+.object-cover {
+    object-fit: cover;
+}
+
 .highlight {
     color: var(--aruna-highlight)
 }
@@ -61,3 +80,18 @@ h3 { margin-block-start: 1em; }
 }
 
 .spacer { height: 1px; }
+
+.fancy-border {
+    --s: 50px; /* the size on the corner */
+  
+    padding: 20px; 
+    border: 2px solid var(--aruna-highlight);
+    mask:
+      conic-gradient(at var(--s) var(--s),#0000 75%,#000 0)
+      0 0/calc(100% - var(--s)) calc(100% - var(--s)),
+      linear-gradient(#000 0 0) content-box;
+    -webkit-mask:
+      conic-gradient(at var(--s) var(--s),#0000 75%,#000 0)
+      0 0/calc(100% - var(--s)) calc(100% - var(--s)),
+      linear-gradient(#000 0 0) content-box;
+}
