--- a/theme/css/class_overwrite.css
+++ b/theme/css/class_overwrite.css
@@ -15,6 +15,7 @@ h3 { margin-block-start: 1em; }
 
 .w-full { width: 100%; }
 .w-30 { width: 30%; }
+.w-60 { width: 60%; }
 
 .min-w-15 { min-width: 15%; }
 .min-w-20 { min-width: 20%; }
@@ -35,6 +36,7 @@ h3 { margin-block-start: 1em; }
 .flex-15 { flex: 0 0 15%; max-width: 15%; }
 .flex-20 { flex: 0 0 20%; max-width: 20%;}
 .flex-25 { flex: 1 0 25%; }
+.flex-45 { flex: 0 0 45%; max-width: 45%; }
 .flex-50 { flex: 1 0 50%; }
 .flex-60 { flex: 1 0 60%; }
 .flex-75 { flex: 1 0 75%; }
@@ -56,6 +58,9 @@ h3 { margin-block-start: 1em; }
 .gap-24 { gap: calc(var(--spacing)*24); }
 
 .p-4 { padding: calc(var(--spacing)*4); }
+.p-8 { padding: calc(var(--spacing)*8); }
+.p-12 { padding: calc(var(--spacing)*12); }
+
 
 .p-t-12 { padding-top: calc(var(--spacing)*12); }
 
