--- a/theme/css/class_overwrite.css
+++ b/theme/css/class_overwrite.css
@@ -37,7 +37,7 @@ h3 { margin-block-start: 1em; }
 .flex-20 { flex: 0 0 20%; max-width: 20%;}
 .flex-25 { flex: 0 0 25%; max-width: 25%;}
 .flex-30 { flex: 0 0 30%; max-width: 30%;}
-.flex-35 { flex: 0 0 35%; max-width: 35%;}
+.flex-35 { flex: 0 0 35%;}
 .flex-40 { flex: 0 0 40%; max-width: 40%;}
 .flex-45 { flex: 0 0 45%; max-width: 45%; }
 .flex-50 { flex: 1 0 50%; }
@@ -76,6 +76,7 @@ h3 { margin-block-start: 1em; }
 .p-x-6 { padding-left: calc(var(--spacing)*6); padding-right: calc(var(--spacing)*6); }
 .p-x-8 { padding-left: calc(var(--spacing)*8); padding-right: calc(var(--spacing)*8); }
 
+.m-t-0 { margin-top: calc(var(--spacing)*0); }
 .m-t-2 { margin-top: calc(var(--spacing)*2); }
 .m-t-4 { margin-top: calc(var(--spacing)*4); }
 .m-t-6 { margin-top: calc(var(--spacing)*6); }
@@ -90,6 +91,7 @@ h3 { margin-block-start: 1em; }
 
 .mx-auto { margin-left: auto; margin-right: auto; }
 
+.m-y-0 { margin-top: calc(var(--spacing)*0); margin-bottom: calc(var(--spacing)*0); }
 .m-y-2 { margin-top: calc(var(--spacing)*2); margin-bottom: calc(var(--spacing)*2); }
 .m-y-4 { margin-top: calc(var(--spacing)*4); margin-bottom: calc(var(--spacing)*4) }
 .m-y-6 { margin-top: calc(var(--spacing)*6); margin-bottom: calc(var(--spacing)*6) }
@@ -102,6 +104,8 @@ h3 { margin-block-start: 1em; }
 .text-3xl { font-size: 4rem; }
 
 .font-bold { font-weight: bold; }
+
+.menu-title {font-weight: bold; }
 
 .object-cover {
     object-fit: cover;
@@ -121,6 +125,10 @@ h3 { margin-block-start: 1em; }
     border: 2px dashed var(--aruna-highlight);
 }
 
+.accordion-border {
+    border: 1px solid var(--aruna-highlight);
+}
+
 .fancy-border {
     --s: 50px; /* the size on the corner */
   
@@ -134,4 +142,8 @@ h3 { margin-block-start: 1em; }
       conic-gradient(at var(--s) var(--s),#0000 75%,#000 0)
       0 0/calc(100% - var(--s)) calc(100% - var(--s)),
       linear-gradient(#000 0 0) content-box;
+}
+
+.hljs-ln-n {
+    color: var(--line-nums)
 }
