--- a/theme/css/class_overwrite.css
+++ b/theme/css/class_overwrite.css
@@ -21,6 +21,8 @@ h3 { margin-block-start: 1em; }
 .min-w-20 { min-width: 20%; }
 .min-w-30 { min-width: 30%; }
 
+.scroll { overflow: scroll; }
+
 .grid { display: grid; }
 .col-4 { grid-template-columns: repeat(4, minmax(0, 1fr)); }
 
@@ -39,7 +41,8 @@ h3 { margin-block-start: 1em; }
 .flex-30 { flex: 0 0 30%; max-width: 30%;}
 .flex-35 { flex: 0 0 35%;}
 .flex-40 { flex: 0 0 40%; max-width: 40%;}
-.flex-45 { flex: 0 0 45%; max-width: 45%; }
+/*.flex-45 { flex: 0 0 45%; max-width: 45%; }*/
+.flex-45 { flex: 1 0 45%; }
 .flex-50 { flex: 1 0 50%; }
 .flex-60 { flex: 1 0 60%; }
 .flex-75 { flex: 1 0 75%; }
@@ -126,7 +129,9 @@ h3 { margin-block-start: 1em; }
 }
 
 .accordion-border {
-    border: 1px solid var(--aruna-highlight);
+    border-bottom: 2px solid; 
+    border-image-slice: 1; 
+    border-image-source: linear-gradient(to right, var(--aruna-highlight), var(--bg));
 }
 
 .fancy-border {
